Actualización de index.html, data.js y nueva carpeta img

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
   <main id="lista-perfiles"></main>
   <script src="data.js"></script>
   <script src="script.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
