--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 <body>
   <header>
     <h1>Hojas de Vida Digitales</h1>
-    <input type="text" id="buscador" placeholder="Buscar por nombre o inicial..." />
+    <input type="text" id="search" placeholder="Buscar por nombre o inicial..." />
   </header>
-  <main id="lista-perfiles"></main>
+
+  <main id="profiles-container"></main>
+
   <script src="data.js"></script>
-  <script src="script.js"></script>
   <script src="main.js"></script>
 </body>
 </html>
+
