Mejoras visuales y funcionalidad del buscador

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Directorio de Hojas de Vida</title>
+  <title>Directorio de hojas de vida</title>
   <link rel="stylesheet" href="estilos.css" />
 </head>
 <body>
