Actualización del index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <h1>Hojas de Vida Digitales</h1>
+    <h1>Hojas de vida digitales</h1>
     <input type="text" id="search" placeholder="Buscar por nombre o inicial..." />
   </header>
 
