--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
 <body>
   <header>
     <h1>Hojas de vida digitales</h1>
-    <input type="text" id="search" placeholder="Buscar por nombre o inicial..." />
+  <input type="text" id="buscador" placeholder="Buscar por nombre o inicial..." />
+
   </header>
 
   <main id="profiles-container"></main>
 
-  <script src="data.js"></script>
-  <script src="main.js"></script>
+<script src="data.js"></script>
+<script src="script.js"></script>
+<script src="main.js"></script>
+
+</body>
 </body>
 </html>
 
