--- a/index.html
+++ b/index.html
@@ -2,23 +2,20 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Directorio de hojas de vida</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Perfiles Profesionales</title>
   <link rel="stylesheet" href="estilos.css" />
 </head>
 <body>
   <header>
-    <h1>Hojas de vida digitales</h1>
-  <input type="text" id="buscador" placeholder="Buscar por nombre o inicial..." />
-
+    <h1>Directorio de Talento</h1>
+    <input type="text" id="buscador" placeholder="Buscar por nombre o inicial..." />
   </header>
 
-  <main id="profiles-container"></main>
+  <main id="lista-perfiles"></main>
 
-<script src="data.js"></script>
-<script src="script.js"></script>
-<script src="main.js"></script>
-
-</body>
+  <!-- Asegúrate de que las rutas sean correctas -->
+  <script src="data.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
-
