Corrección main.js y mejora en buscador y estilos

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
   <header>
-    <h1>Directorio de Talento</h1>
-    <input type="text" id="buscador" placeholder="Buscar por nombre o inicial..." />
-  </header>
+    <h1>Directorio de talento</h1>
+<input type="text" id="buscador" placeholder="Buscar por nombre o inicial..." />
+<main id="lista-perfiles"></main>
 
   <main id="lista-perfiles"></main>
 
   <!-- Asegúrate de que las rutas sean correctas -->
-  <script src="data.js"></script>
-  <script src="main.js"></script>
+<script src="data.js" defer></script>
+<script src="main.js" defer></script>
 </body>
 </html>
