Resueltos conflictos de merge

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 <body>
   <header>
     <h1>Directorio de Perfiles</h1>
+ HEAD
     <input type="text" id="buscador" placeholder="Buscar por nombre o iniciales..." />
+
+<input type="text" id="buscador" placeholder="Buscar por nombre o inicial..." />
+<main id="lista-perfiles"></main>
+c6a2b6e (Actualización de estilos y funcionalidades visuales)
     <select id="filtro-skill">
       <option value="">Todas las habilidades</option>
       <option value="HTML">HTML</option>
