Descripción breve de los cambios realizados

--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
   <header>
     <h1>Directorio de Perfiles</h1>
  HEAD
-    <input type="text" id="buscador" placeholder="Buscar por nombre o iniciales..." />
-
 <input type="text" id="buscador" placeholder="Buscar por nombre o inicial..." />
 <main id="lista-perfiles"></main>
 c6a2b6e (Actualización de estilos y funcionalidades visuales)
@@ -42,7 +40,8 @@ c6a2b6e (Actualización de estilos y funcionalidades visuales)
   <main>
     <div id="lista-perfiles"></div>
   </main>
-  <script src="data.js"></script>
-  <script src="main.js"></script>
+  <script src="data.js"defer></script>
+<script src="main.js" defer></script>
+
 </body>
 </html>
