--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Directorio de Perfiles</h1>
+    <h1>Directorio de perfiles</h1>
  HEAD
 <input type="text" id="buscador" placeholder="Buscar por nombre o inicial..." />
 <main id="lista-perfiles"></main>
