--- a/index.html
+++ b/index.html
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Perfiles Interactivos</title>
-  <link rel="stylesheet" href="estilos.css" />
+  <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-  <header>Perfiles Interactivos</header>
+
+  <header>
+    Explorador de Perfiles
+  </header>
 
   <div class="search-container">
-    <input type="text" id="buscador" placeholder="Buscar por nombre..." />
+    <input type="text" id="buscador" placeholder="Buscar por nombre o descripción...">
     <select id="filtro-skill">
-      <option value="all">Todas las skills</option>
+      <option value="">Filtrar por habilidad</option>
     </select>
-    <button id="toggle-tema">Modo oscuro</button>
+    <button id="toggle-tema">Cambiar Tema</button>
   </div>
 
-  <main class="profiles-grid" id="profilesGrid">
-    <!-- Las tarjetas de perfil se generarán aquí con JS -->
+  <main>
+    <div class="profiles-grid" id="contenedor-perfiles"></div>
   </main>
 
-  <footer>© 2025 Mi Proyecto Cool</footer>
+  <footer>
+    Hecho con ❤️ para mostrar perfiles dinámicos.
+  </footer>
 
   <script src="data.js"></script>
   <script src="main.js"></script>
