Descripción breve de los cambios realizados

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Directorio de Perfiles</title>
-  <link rel="stylesheet" href="estilos.css" />
+<link rel="stylesheet" href="estilos.css" />
 </head>
 <body>
   <header>
-    <h1>Directorio de Perfiles</h1>
+    <h1>Directorio de perfiles</h1>
     <input type="text" id="buscador" placeholder="Buscar por nombre o iniciales..." />
     <select id="filtro-skill">
       <option value="">Todas las habilidades</option>
