Descripción breve de los cambios realizados

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Directorio de Perfiles</title>
-<link rel="stylesheet" href="estilos.css" />
+  <link rel="stylesheet" href="estilos.css" />
 </head>
 <body>
   <header>
@@ -37,6 +37,12 @@
   <main>
     <div id="lista-perfiles"></div>
   </main>
+
+  <!-- Lightbox para imagen ampliada -->
+  <div class="lightbox" id="lightbox" style="display:none;">
+    <img src="" alt="Imagen ampliada" />
+  </div>
+
   <script src="data.js"></script>
   <script src="main.js"></script>
 </body>
